# Makora

./: .env.example  .gitignore  .vercelignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: PLAN-01-monorepo-scaffolding.md  PLAN-02-vault-program.md  PLAN-03-data-jupiter-cli.md
.planning/phases/02-core-defi/: PLAN-04-protocol-adapters.md  PLAN-05-router-execution-engine.md  PLAN-06-risk-manager.md
.planning/phases/03-agent-intelligence/: PLAN-07-strategy-engine.md  PLAN-08-agent-core.md  PLAN-09-strategy-program.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/api/: package.json
apps/api/src/: index.ts
apps/cli/: package.json  tsup.config.ts
apps/cli/src/: index.ts
apps/cli/src/commands/: agent.ts  auto.ts  shield.ts  stake.ts  status.ts  strategy.ts  swap.ts
apps/cli/src/utils/: agent-factory.ts  config.ts  display.ts  wallet.ts
apps/dashboard/: .gitignore  QUICKSTART.md  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vitest.config.ts
apps/dashboard/public/: manifest.json
apps/dashboard/src/: types.d.ts
apps/dashboard/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
apps/dashboard/src/components/: ActivityFeed.tsx  ChatPanel.tsx  ErrorBoundary.tsx  ExecutionPanel.tsx  Header.tsx  LLMReasoningPanel.tsx  MarketTickerBar.tsx  OnboardingBanner.tsx  PerformanceHistoryPanel.tsx  PolymarketPanel.tsx  PortfolioCard.tsx  PositionChart.tsx  PositionsPanel.tsx  RiskControls.tsx  SelfEvaluationPanel.tsx  SentimentPanel.tsx  SettingsPanel.tsx  StealthSessionsPanel.tsx  StrategyPanel.tsx  TheWheel.tsx  TradeGuardPanel.tsx  TradingModeSelector.tsx  WalletButton.tsx
apps/dashboard/src/hooks/: useActivityFeed.ts  useAgentStatus.ts  (+17 more)
apps/telegram/: package.json
apps/telegram/src/: alerts.ts  arcium-client.ts  autonomous.ts  index.ts  indicators.ts  keyboards.ts  llm.ts  price-feed.ts  sentiment.ts  session.ts  shielded-vault.ts  simulated-perps.ts  social-feed.ts  tools.ts  zk-prover.ts
apps/worker/: package.json
apps/worker/src/: index.ts
circuits/: .gitignore  README.md  package.json  poseidon.circom  transfer.circom
openclaw/: Dockerfile  entrypoint.sh  openclaw.json  railway.toml
openclaw/workspace/: IDENTITY.md
programs/makora_confidential/: Cargo.toml
programs/makora_confidential/encrypted-ixs/: confidential_swap.rs
programs/makora_confidential/src/: lib.rs
programs/makora_privacy/: Cargo.toml
programs/makora_privacy/src/: errors.rs  lib.rs  verifying_key.rs
programs/makora_privacy/src/instructions/: claim_stealth.rs  init_pool.rs  mod.rs  send_stealth.rs  shield.rs  unshield.rs
programs/makora_privacy/src/state/: mod.rs  nullifier.rs  shielded_pool.rs  stealth_account.rs
programs/makora_strategy/: Cargo.toml
programs/makora_strategy/src/: errors.rs  lib.rs
programs/makora_strategy/src/instructions/: initialize.rs  log_action.rs  mod.rs  update_permissions.rs  update_strategy.rs
programs/makora_strategy/src/state/: audit_entry.rs  mod.rs  strategy_account.rs
programs/makora_vault/: Cargo.toml
programs/makora_vault/src/: errors.rs  lib.rs
programs/makora_vault/src/instructions/: agent_deposit.rs  agent_withdraw.rs  deposit.rs  initialize.rs  mod.rs  set_mode.rs  withdraw.rs
programs/makora_vault/src/state/: vault.rs
tests/: integration.test.ts  strategy-program.test.ts
(+53 files in other folders)
