[workspace]
members = [
    "programs/*"
]

resolver = "2"

[workspace.package]
rust-version = "1.75"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
# Anchor dependencies pinned to 0.30.1 (compatible with Solana 1.18)
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# Solana dependencies
solana-program = "1.18.17"
solana-sdk = "1.18.17"

# Serialization - borsh version compatible with Anchor 0.30.1
borsh = "1.5"

# Common utilities
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }

# ZK dependencies for shielded transactions (Phase 4)
# ark-bn254 = "0.4.0"
# ark-groth16 = "0.4.0"
# ark-serialize = "0.4.0"
# groth16-solana = "0.2.0"
# sha3 = "0.10"
