[package]
name = "makora_vault"
version = "0.1.0"
description = "Makora Vault - On-chain escrow/treasury for agent-managed DeFi funds"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "makora_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

# dev-dependencies are added at the workspace test level, not here
# This avoids pulling heavy deps (solana-program-test) during `anchor build`
